feat: update contact file

--- a/contact.html
+++ b/contact.html
@@ -150,7 +150,7 @@
                 <span class="lnr lnr-phone-handset"></span>
               </div>
               <div class="contact-details">
-                <h5>+503 (2000) 0000</h5>
+                <h5>+503 (2275) 8888 </h5>
                 <p>
                   Lun a Vie 8:00 a 11:30 a.m. y 1:00 a 4:30 p.m. Sábados 8:00 a
                   11:30 a.m.
@@ -164,6 +164,15 @@
               <div class="contact-details">
                 <h5>mua@utec.edu.sv</h5>
                 <p>¡Envíanos tu consulta en cualquier momento!</p>
+              </div>
+            </div>
+            <div class="single-contact-address d-flex flex-row">
+              <div class="icon">
+                <span class="lnr lnr-warning"></span>
+              </div>
+              <div class="contact-details">
+                <h5>Favor no ingresar comida o mascotas</h5>
+                <p>Política del Museo</p>
               </div>
             </div>
           </div>
@@ -272,7 +281,7 @@
               <h6>Síguenos</h6>
               <p>Comparte nuestras historias</p>
               <div class="footer-social d-flex align-items-center">
-                <a href="#"><i class="fa fa-facebook"></i></a>
+                <a href="https://www.facebook.com/share/1E4GpDyfXC/"><i class="fa fa-facebook"></i></a>
                 <a href="#"><i class="fa fa-twitter"></i></a>
                 <a href="#"><i class="fa fa-instagram"></i></a>
                 <a href="#"><i class="fa fa-youtube"></i></a>
