feat: update prices

--- a/ticket.html
+++ b/ticket.html
@@ -140,7 +140,7 @@
             y arte contemporáneo salvadoreño.
           </p>
           <div class="meta-bottom d-flex justify-content-start">
-            <p class="price">$15.00 por persona</p>
+            <p class="price">Gratis</p>
           </div>
         </div>
         <div class="col-lg-4 col-md-6 single-exhibition">
@@ -157,7 +157,7 @@
             arqueología e historia de El Salvador.
           </p>
           <div class="meta-bottom d-flex justify-content-start">
-            <p class="price">Gratis por estudiante</p>
+            <p class="price">Gratis</p>
           </div>
         </div>
         <div class="col-lg-4 col-md-6 single-exhibition">
@@ -174,7 +174,7 @@
             especiales.
           </p>
           <div class="meta-bottom d-flex justify-content-start">
-            <p class="price">$200.00 por grupo</p>
+            <p class="price">Gratis</p>
           </div>
         </div>
         <div class="col-lg-4 col-md-6 single-exhibition">
@@ -192,7 +192,7 @@
             significado de nuestro patrimonio arqueológico.
           </p>
           <div class="meta-bottom d-flex justify-content-start">
-            <p class="price">$20.00 por persona</p>
+            <p class="price">Gratis</p>
           </div>
         </div>
         <div class="col-lg-4 col-md-6 single-exhibition">
@@ -209,7 +209,7 @@
             y memorable.
           </p>
           <div class="meta-bottom d-flex justify-content-start">
-            <p class="price">$12.00 por persona</p>
+            <p class="price">Gratis</p>
           </div>
         </div>
         <div class="col-lg-4 col-md-6 single-exhibition">
@@ -227,7 +227,7 @@
             arte actual.
           </p>
           <div class="meta-bottom d-flex justify-content-start">
-            <p class="price">$18.00 por persona</p>
+            <p class="price">Gratis</p>
           </div>
         </div>
       </div>
